# test_task

./: .gitignore  README.md  main.py  pyproject.toml  settings.py
pages/: about_page.py  base_page.py  contacts_page.py  download_page.py  tensor_page.py  tenzor_page.py
tests/: conftest.py  test_first_scenarios.py  test_sbis.py  test_second_scenarios.py  test_third_scenarios.py
