[tool.poetry]
name = "test-task"
version = "0.1.0"
description = ""
authors = ["devaev.lev <ldevaev@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.23.1"
pytest = "^8.3.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
